--- a/Company.DataGrid/themes/generic.xaml
+++ b/Company.DataGrid/themes/generic.xaml
@@ -1,5 +1,5 @@
 ﻿<ResourceDictionary
-    xmlns="http://schemas.microsoft.com/client/2007"
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:company="clr-namespace:Company.DataGrid.View">
 
