--- a/Examples/Page.xaml
+++ b/Examples/Page.xaml
@@ -1,9 +1,18 @@
 ﻿<UserControl x:Class="Examples.Page"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" 
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" 
-    xmlns:company="clr-namespace:Company.DataGrid.View;assembly=Company.DataGrid" 
-    Width="400" Height="300">
+    xmlns:company="clr-namespace:Company.DataGrid.View;assembly=Company.DataGrid">
     <StackPanel x:Name="LayoutRoot" Background="White">
 		<company:DataGrid Name="dataGrid" ItemsSource="{Binding}" AutoCreateColumns="True" />
+		<ListBox ItemsSource="{Binding}">
+			<ListBox.ItemTemplate>
+				<DataTemplate>
+					<StackPanel Orientation="Horizontal">
+						<TextBlock Text="{Binding Name}" />
+						<TextBlock Text="{Binding Age}" />
+					</StackPanel> 
+				</DataTemplate>
+			</ListBox.ItemTemplate>
+		</ListBox>
 	</StackPanel>
 </UserControl>
