--- a/Examples/Page.xaml
+++ b/Examples/Page.xaml
@@ -1,19 +1,90 @@
 ﻿<UserControl x:Class="Examples.Page"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" 
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" 
-    xmlns:company="clr-namespace:Company.DataGrid.View;assembly=Company.DataGrid">
-    <StackPanel x:Name="LayoutRoot" Background="White">
-		<company:DataGrid Name="dataGrid" ItemsSource="{Binding}" AutoCreateColumns="True" />
-		<ListBox ItemsSource="{Binding}">
+    xmlns:company="clr-namespace:Company.DataGrid.View;assembly=Company.DataGrid" 
+    xmlns:controllers="clr-namespace:Company.DataGrid.Controllers;assembly=Company.DataGrid" 
+    xmlns:Examples="clr-namespace:Examples"
+    >
+	<Grid Width="900" VerticalAlignment="Center">
+		<Grid.Resources>
+			<Examples:BooleanToYesNoConverter x:Key="booleanToYesNoConverter" />
+			<Style x:Key="cellStyleName" TargetType="company:Cell">
+				<Setter Property="Background" Value="Blue" />
+			</Style>
+			<Style x:Key="cellStyleAge" TargetType="company:Cell">
+				<Setter Property="Background" Value="Red" />
+			</Style>
+			<Style x:Key="cellStyleIsSingle" TargetType="company:Cell">
+				<Setter Property="Background" Value="Green" />
+				<Setter Property="Template">
+					<Setter.Value>
+						<ControlTemplate TargetType="company:Cell">
+							<Border Background="{TemplateBinding Background}" BorderBrush="{TemplateBinding BorderBrush}" 
+							BorderThickness="{TemplateBinding BorderThickness}">
+								<ContentPresenter />
+								<VisualStateManager.CustomVisualStateManager>
+									<company:CustomVSM />
+								</VisualStateManager.CustomVisualStateManager>
+								<VisualStateManager.VisualStateGroups>
+									<VisualStateGroup>
+										<VisualState Name="View">
+											<Storyboard>
+												<ObjectAnimationUsingKeyFrames Storyboard.TargetProperty="Content">
+													<DiscreteObjectKeyFrame KeyTime="0:0:0">
+														<DiscreteObjectKeyFrame.Value>
+															<TextBlock Text="{Binding Value, RelativeSource={RelativeSource TemplatedParent}, 
+																			  Converter={StaticResource booleanToYesNoConverter}}" />
+														</DiscreteObjectKeyFrame.Value>
+													</DiscreteObjectKeyFrame>
+												</ObjectAnimationUsingKeyFrames>
+											</Storyboard>
+										</VisualState>
+										<VisualState Name="CustomEditor">
+											<Storyboard>
+												<ObjectAnimationUsingKeyFrames Storyboard.TargetProperty="Content">
+													<DiscreteObjectKeyFrame KeyTime="0:0:0">
+														<DiscreteObjectKeyFrame.Value>
+															<CheckBox IsChecked="{Binding EditorValue, RelativeSource={RelativeSource TemplatedParent}, 
+																				  Mode=TwoWay}" />
+														</DiscreteObjectKeyFrame.Value>
+													</DiscreteObjectKeyFrame>
+												</ObjectAnimationUsingKeyFrames>
+											</Storyboard>
+										</VisualState>
+									</VisualStateGroup>
+								</VisualStateManager.VisualStateGroups>
+							</Border>
+						</ControlTemplate>
+					</Setter.Value>
+				</Setter>
+			</Style>
+			<Style x:Key="cellStyleMaritalStatus" TargetType="company:Cell">
+				<Setter Property="Background" Value="Yellow" />
+			</Style>
+		</Grid.Resources>
+		<Grid.RowDefinitions>
+			<RowDefinition />
+			<RowDefinition Height="Auto" />
+			<RowDefinition />
+		</Grid.RowDefinitions>
+		<company:DataGrid x:Name="dataGrid" AutoCreateColumns="False">
+			<company:DataGrid.Columns>
+				<controllers:Column Binding="{Binding Name, Mode=TwoWay}" CellStyle="{StaticResource cellStyleName}" />
+				<controllers:Column Binding="{Binding Age, Mode=TwoWay}" CellStyle="{StaticResource cellStyleAge}" />
+				<controllers:Column Binding="{Binding IsSingle, Mode=TwoWay}" CellStyle="{StaticResource cellStyleIsSingle}" />
+				<controllers:Column Binding="{Binding MaritalStatus, Mode=TwoWay}" CellStyle="{StaticResource cellStyleMaritalStatus}" />
+			</company:DataGrid.Columns>
+		</company:DataGrid>
+		<Button Grid.Row="1" HorizontalAlignment="Stretch" Content="GC" Click="Button_Click" />
+		<ListBox Name="listBoxCustomers" Grid.Row="2">
 			<ListBox.ItemTemplate>
 				<DataTemplate>
 					<StackPanel Orientation="Horizontal">
-						<TextBlock Text="{Binding Name}" />
-						<TextBlock Text="{Binding Age}" />
-						<TextBlock Text="{Binding IsSingle}" />
-					</StackPanel> 
+						<CheckBox IsChecked="{Binding IsSingle, Mode=TwoWay}" />
+						<CheckBox IsChecked="{Binding MaritalStatus, Mode=TwoWay}" IsThreeState="True" />
+					</StackPanel>
 				</DataTemplate>
 			</ListBox.ItemTemplate>
 		</ListBox>
-	</StackPanel>
+	</Grid>
 </UserControl>
