Made sure the horizontal scroll works properly.

--- a/Company.DataGrid/themes/generic.xaml
+++ b/Company.DataGrid/themes/generic.xaml
@@ -18,7 +18,7 @@
 			<Setter.Value>
 				<ControlTemplate TargetType="company:DataGrid">
 					<Border Background="{TemplateBinding Background}">
-						<ScrollViewer VerticalScrollBarVisibility="Auto">
+						<ScrollViewer VerticalScrollBarVisibility="Auto" HorizontalScrollBarVisibility="Auto">
 							<ItemsPresenter />
 						</ScrollViewer>
 					</Border>
