Removed the now redundant SortDirectionToBooleanConverter class. Bound the width of the cell to the width of its column in XAML.

--- a/Company.DataGrid/themes/generic.xaml
+++ b/Company.DataGrid/themes/generic.xaml
@@ -62,7 +62,12 @@
 	
 	<Style TargetType="company:Cell">
 		<Setter Property="Background" Value="Transparent" />
-		<Setter Property="Template">
+        <Setter Property="controllers:StyleBinder.Binding">
+            <Setter.Value>
+                <controllers:StyleBinding Property="Width" Binding="{Binding Column.ActualWidth, RelativeSource={RelativeSource Self}}" />
+            </Setter.Value>
+        </Setter>
+        <Setter Property="Template">
             <Setter.Value>
 				<ControlTemplate TargetType="company:Cell">
 					<Border Background="{TemplateBinding Background}" BorderBrush="{TemplateBinding BorderBrush}" 
