--- a/Company.DataGrid/themes/generic.xaml
+++ b/Company.DataGrid/themes/generic.xaml
@@ -59,12 +59,13 @@
     </Style>
 
 	<controllers:ByteArrayUriToImageConverter x:Key="byteArrayToImageConverter" />
-	
+
 	<Style TargetType="company:Cell">
 		<Setter Property="Background" Value="Transparent" />
         <Setter Property="controllers:StyleBinder.Binding">
             <Setter.Value>
-                <controllers:StyleBinding Property="Width" Binding="{Binding Column.ActualWidth, RelativeSource={RelativeSource Self}}" />
+                <controllers:StyleBinding Property="Width" 
+                                          Binding="{Binding Column.ActualWidth, RelativeSource={RelativeSource Self}, Mode=TwoWay}" />
             </Setter.Value>
         </Setter>
         <Setter Property="Template">
