--- a/Examples/Page.xaml
+++ b/Examples/Page.xaml
@@ -73,10 +73,10 @@
 			<RowDefinition Height="Auto" />
 		</Grid.RowDefinitions>
 		<CheckBox Content="Switch from automatic to custom columns" IsChecked="{Binding AutoCreateColumns, ElementName=dataGrid, Mode=TwoWay}" />
-		<company:DataGrid x:Name="dataGrid" Grid.Row="1" SelectionMode="Extended" IsEditable="False" AutoCreateColumns="False">
+		<company:DataGrid x:Name="dataGrid" Grid.Row="1" SelectionMode="Extended" IsEditable="False" AutoCreateColumns="False" ColumnWidth="Auto">
 			<company:DataGrid.Columns>
 				<controllers:Column Binding="{Binding Name, Mode=TwoWay}" CellStyle="{StaticResource cellStyleName}" />
-				<controllers:Column Binding="{Binding Age, Mode=TwoWay}" CellStyle="{StaticResource cellStyleAge}" />
+				<controllers:Column Binding="{Binding Age, Mode=TwoWay}" Width="200" CellStyle="{StaticResource cellStyleAge}" />
 				<controllers:Column Binding="{Binding Orders[0].Name, Mode=TwoWay}" IsEditable="True" Header="First Order Name" />
 				<controllers:Column Binding="{Binding IsSingle, Mode=TwoWay}" CellStyle="{StaticResource cellStyleIsSingle}" />
 				<controllers:Column Binding="{Binding MaritalStatus, Mode=TwoWay}" CellStyle="{StaticResource cellStyleMaritalStatus}" />
