Renamed Row.IsFocused to Row.IsFocused. Made sure it is true when the row gets the focus and false when it loses it.

--- a/Company.DataGrid/themes/generic.xaml
+++ b/Company.DataGrid/themes/generic.xaml
@@ -187,8 +187,8 @@
                         </VisualStateManager.CustomVisualStateManager>
                         <VisualStateManager.VisualStateGroups>
                             <VisualStateGroup>
-                                <VisualState x:Name="NotCurrent" />
-                                <VisualState x:Name="Current">
+                                <VisualState x:Name="Unfocused" />
+                                <VisualState x:Name="Focused">
                                     <Storyboard>
                                         <ObjectAnimationUsingKeyFrames Storyboard.TargetProperty="BorderBrush">
                                             <DiscreteObjectKeyFrame KeyTime="0:0:0">
