--- a/Company.DataGrid/themes/generic.xaml
+++ b/Company.DataGrid/themes/generic.xaml
@@ -70,7 +70,7 @@
                 <SolidColorBrush company:OSBrush.OSColor="ControlColor" />
             </Setter.Value>
         </Setter>
-        <Setter Property="Padding" Value="8,3,8,3" />
+        <Setter Property="Padding" Value="6,3,6,3" />
         <Setter Property="controllers:StyleBinder.Bindings">
             <Setter.Value>
                 <controllers:StyleBindingCollection>
@@ -247,11 +247,12 @@
                 </controllers:StyleBindingCollection>
             </Setter.Value>
         </Setter>
+        <Setter Property="Padding" Value="6,3,6,3" />
         <Setter Property="Template">
             <Setter.Value>
 				<ControlTemplate TargetType="company:Cell">
 					<Border Background="{TemplateBinding Background}" BorderBrush="{TemplateBinding BorderBrush}" 
-							BorderThickness="{TemplateBinding BorderThickness}">
+							BorderThickness="{TemplateBinding BorderThickness}" Padding="{TemplateBinding Padding}">
 						<ContentPresenter Name="Content" Tag="{Binding RelativeSource={RelativeSource TemplatedParent}}" 
                                           HorizontalAlignment="{TemplateBinding HorizontalContentAlignment}" />
 						<VisualStateManager.VisualStateGroups>
