--- a/Company.DataGrid/themes/generic.xaml
+++ b/Company.DataGrid/themes/generic.xaml
@@ -245,88 +245,88 @@
 
 	<Style TargetType="company:Cell">
 		<Setter Property="Background" Value="Transparent" />
-        <Setter Property="VerticalContentAlignment" Value="Center" />
-        <Setter Property="controllers:StyleBinder.Bindings">
-            <Setter.Value>
-                <controllers:StyleBindingCollection>
-                    <controllers:StyleBinding Property="Width" 
+		<Setter Property="VerticalContentAlignment" Value="Center" />
+		<Setter Property="controllers:StyleBinder.Bindings">
+			<Setter.Value>
+				<controllers:StyleBindingCollection>
+					<controllers:StyleBinding Property="Width" 
                                               Binding="{Binding Column.ActualWidth, RelativeSource={RelativeSource Self}, Mode=TwoWay}" />
-                    <controllers:StyleBinding Property="HorizontalContentAlignment"
+					<controllers:StyleBinding Property="HorizontalContentAlignment"
                                               Binding="{Binding DataType, RelativeSource={RelativeSource Self}, 
                                                         Converter={StaticResource typeToAlignmentConverter}}" />
-                    <controllers:StyleBinding Property="Visibility" 
+					<controllers:StyleBinding Property="Visibility" 
                                               Binding="{Binding Column.Visibility, RelativeSource={RelativeSource Self}, Mode=TwoWay}" />
-                </controllers:StyleBindingCollection>
-            </Setter.Value>
-        </Setter>
-        <Setter Property="Padding" Value="6,3,6,3" />
-        <Setter Property="BorderThickness" Value="0,0,1,0" />
-        <Setter Property="BorderBrush">
-            <Setter.Value>
-                <SolidColorBrush company:OSBrush.OSColor="ActiveBorderColor" />
-            </Setter.Value>
-        </Setter>
-        <Setter Property="Template">
-            <Setter.Value>
+				</controllers:StyleBindingCollection>
+			</Setter.Value>
+		</Setter>
+		<Setter Property="Padding" Value="6,3,6,3" />
+		<Setter Property="BorderThickness" Value="0,0,1,0" />
+		<Setter Property="BorderBrush">
+			<Setter.Value>
+				<SolidColorBrush company:OSBrush.OSColor="ActiveBorderColor" />
+			</Setter.Value>
+		</Setter>
+		<Setter Property="Template">
+			<Setter.Value>
 				<ControlTemplate TargetType="company:Cell">
 					<Border Background="{TemplateBinding Background}" BorderBrush="{TemplateBinding BorderBrush}" 
 							BorderThickness="{TemplateBinding BorderThickness}" Padding="{TemplateBinding Padding}">
 						<ContentPresenter Name="Content" Tag="{Binding RelativeSource={RelativeSource TemplatedParent}}" 
                                           HorizontalAlignment="{TemplateBinding HorizontalContentAlignment}"
                                           VerticalAlignment="{TemplateBinding VerticalContentAlignment}" />
-                        <VisualStateManager.CustomVisualStateManager>
-                            <company:CustomVSM />
-                        </VisualStateManager.CustomVisualStateManager>
+						<VisualStateManager.CustomVisualStateManager>
+							<company:CustomVSM />
+						</VisualStateManager.CustomVisualStateManager>
 						<VisualStateManager.VisualStateGroups>
-                            <VisualStateGroup Name="Focus">
-                                <VisualState Name="Unfocused" />
-                                <VisualState Name="Focused">
-                                    <Storyboard>
-                                        <ObjectAnimationUsingKeyFrames Storyboard.TargetProperty="BorderBrush">
-                                            <DiscreteObjectKeyFrame KeyTime="0:0:0">
-                                                <DiscreteObjectKeyFrame.Value>
-                                                    <SolidColorBrush company:OSBrush.OSColor="ControlTextColor" />
-                                                </DiscreteObjectKeyFrame.Value>
-                                            </DiscreteObjectKeyFrame>
-                                        </ObjectAnimationUsingKeyFrames>
-                                        <ObjectAnimationUsingKeyFrames Storyboard.TargetProperty="BorderThickness">
-                                            <DiscreteObjectKeyFrame KeyTime="0:0:0" Value="2" />
-                                        </ObjectAnimationUsingKeyFrames>
-                                        <ObjectAnimationUsingKeyFrames Storyboard.TargetProperty="Padding">
-                                            <DiscreteObjectKeyFrame KeyTime="0:0:0" Value="4,1,5,1" />
-                                        </ObjectAnimationUsingKeyFrames>
-                                    </Storyboard>
-                                </VisualState>
-                            </VisualStateGroup>
-                            <VisualStateGroup Name="Selection">
+							<VisualStateGroup Name="Focus">
+								<VisualState Name="Unfocused" />
+								<VisualState Name="Focused">
+									<Storyboard>
+										<ObjectAnimationUsingKeyFrames Storyboard.TargetProperty="BorderBrush">
+											<DiscreteObjectKeyFrame KeyTime="0:0:0">
+												<DiscreteObjectKeyFrame.Value>
+													<SolidColorBrush company:OSBrush.OSColor="ControlTextColor" />
+												</DiscreteObjectKeyFrame.Value>
+											</DiscreteObjectKeyFrame>
+										</ObjectAnimationUsingKeyFrames>
+										<ObjectAnimationUsingKeyFrames Storyboard.TargetProperty="BorderThickness">
+											<DiscreteObjectKeyFrame KeyTime="0:0:0" Value="2" />
+										</ObjectAnimationUsingKeyFrames>
+										<ObjectAnimationUsingKeyFrames Storyboard.TargetProperty="Padding">
+											<DiscreteObjectKeyFrame KeyTime="0:0:0" Value="4,1,5,1" />
+										</ObjectAnimationUsingKeyFrames>
+									</Storyboard>
+								</VisualState>
+							</VisualStateGroup>
+							<VisualStateGroup Name="Selection">
 								<VisualState Name="Deselected" />
-                                <VisualState Name="Selected">
-                                    <Storyboard>
-                                        <ObjectAnimationUsingKeyFrames Storyboard.TargetProperty="Background">
-                                            <DiscreteObjectKeyFrame KeyTime="0:0:0">
-                                                <DiscreteObjectKeyFrame.Value>
-                                                    <SolidColorBrush company:OSBrush.OSColor="HighlightColor" />
-                                                </DiscreteObjectKeyFrame.Value>
-                                            </DiscreteObjectKeyFrame>
-                                        </ObjectAnimationUsingKeyFrames>
-                                        <ObjectAnimationUsingKeyFrames Storyboard.TargetProperty="Foreground">
-                                            <DiscreteObjectKeyFrame KeyTime="0:0:0">
-                                                <DiscreteObjectKeyFrame.Value>
-                                                    <SolidColorBrush company:OSBrush.OSColor="HighlightTextColor" />
-                                                </DiscreteObjectKeyFrame.Value>
-                                            </DiscreteObjectKeyFrame>
-                                        </ObjectAnimationUsingKeyFrames>
-                                    </Storyboard>
-                                </VisualState>
-                            </VisualStateGroup>
+								<VisualState Name="Selected">
+									<Storyboard>
+										<ObjectAnimationUsingKeyFrames Storyboard.TargetProperty="Background">
+											<DiscreteObjectKeyFrame KeyTime="0:0:0">
+												<DiscreteObjectKeyFrame.Value>
+													<SolidColorBrush company:OSBrush.OSColor="HighlightColor" />
+												</DiscreteObjectKeyFrame.Value>
+											</DiscreteObjectKeyFrame>
+										</ObjectAnimationUsingKeyFrames>
+										<ObjectAnimationUsingKeyFrames Storyboard.TargetProperty="Foreground">
+											<DiscreteObjectKeyFrame KeyTime="0:0:0">
+												<DiscreteObjectKeyFrame.Value>
+													<SolidColorBrush company:OSBrush.OSColor="HighlightTextColor" />
+												</DiscreteObjectKeyFrame.Value>
+											</DiscreteObjectKeyFrame>
+										</ObjectAnimationUsingKeyFrames>
+									</Storyboard>
+								</VisualState>
+							</VisualStateGroup>
 							<VisualStateGroup Name="Editing">
 								<VisualState Name="View" />
 								<VisualState Name="Boolean">
-                                    <Storyboard>
-                                        <ObjectAnimationUsingKeyFrames Storyboard.TargetProperty="IsTabStop">
-                                            <DiscreteObjectKeyFrame KeyTime="0:0:0" Value="False" />
-                                        </ObjectAnimationUsingKeyFrames>
-                                        <ObjectAnimationUsingKeyFrames Storyboard.TargetProperty="ContentTemplate">
+									<Storyboard>
+										<ObjectAnimationUsingKeyFrames Storyboard.TargetProperty="IsTabStop">
+											<DiscreteObjectKeyFrame KeyTime="0:0:0" Value="False" />
+										</ObjectAnimationUsingKeyFrames>
+										<ObjectAnimationUsingKeyFrames Storyboard.TargetProperty="ContentTemplate">
 											<DiscreteObjectKeyFrame KeyTime="0:0:0">
 												<DiscreteObjectKeyFrame.Value>
 													<DataTemplate>
@@ -340,9 +340,9 @@
 								</VisualState>
 								<VisualState Name="NullableBoolean">
 									<Storyboard>
-                                        <ObjectAnimationUsingKeyFrames Storyboard.TargetProperty="IsTabStop">
-                                            <DiscreteObjectKeyFrame KeyTime="0:0:0" Value="False" />
-                                        </ObjectAnimationUsingKeyFrames>
+										<ObjectAnimationUsingKeyFrames Storyboard.TargetProperty="IsTabStop">
+											<DiscreteObjectKeyFrame KeyTime="0:0:0" Value="False" />
+										</ObjectAnimationUsingKeyFrames>
 										<ObjectAnimationUsingKeyFrames Storyboard.TargetProperty="ContentTemplate">
 											<DiscreteObjectKeyFrame KeyTime="0:0:0">
 												<DiscreteObjectKeyFrame.Value>
@@ -370,10 +370,10 @@
 										</ObjectAnimationUsingKeyFrames>
 									</Storyboard>
 								</VisualState>
-								<VisualState Name="EditText">
-                                    <Storyboard>
-                                        <ObjectAnimationUsingKeyFrames Storyboard.TargetProperty="IsTabStop">
-                                            <DiscreteObjectKeyFrame KeyTime="0:0:0" Value="False" />
+								<VisualState Name="Editor">
+									<Storyboard>
+										<ObjectAnimationUsingKeyFrames Storyboard.TargetProperty="IsTabStop">
+											<DiscreteObjectKeyFrame KeyTime="0:0:0" Value="False" />
 										</ObjectAnimationUsingKeyFrames>
 										<ObjectAnimationUsingKeyFrames Storyboard.TargetProperty="HorizontalContentAlignment">
 											<DiscreteObjectKeyFrame KeyTime="0:0:0" Value="Stretch" />
@@ -381,28 +381,55 @@
 										<ObjectAnimationUsingKeyFrames Storyboard.TargetProperty="ContentTemplate">
 											<DiscreteObjectKeyFrame KeyTime="0:0:0">
 												<DiscreteObjectKeyFrame.Value>
-                                                    <DataTemplate>
-                                                        <TextBox Text="{Binding Tag.EditorValue, RelativeSource={RelativeSource TemplatedParent}, Mode=TwoWay}"
-                                                                 SelectionLength="1000000000" company:ControlExtensions.FocusOnLoad="True" />
-                                                    </DataTemplate>
-                                                </DiscreteObjectKeyFrame.Value>
+													<DataTemplate>
+														<company:Editor Content="{Binding}"
+																		Value="{Binding Tag.Value, RelativeSource={RelativeSource TemplatedParent}, Mode=TwoWay}"
+                                                                        DataType="{Binding Tag.DataType, RelativeSource={RelativeSource TemplatedParent}}" />
+													</DataTemplate>
+												</DiscreteObjectKeyFrame.Value>
 											</DiscreteObjectKeyFrame>
 										</ObjectAnimationUsingKeyFrames>
 									</Storyboard>
 								</VisualState>
-								<VisualState Name="EditNumber">
+							</VisualStateGroup>
+						</VisualStateManager.VisualStateGroups>
+					</Border>
+				</ControlTemplate>
+			</Setter.Value>
+		</Setter>
+	</Style>
+
+	<Style TargetType="company:Editor">
+		<Setter Property="IsTabStop" Value="False" />
+        <Setter Property="Template">
+            <Setter.Value>
+                <ControlTemplate TargetType="company:Editor">
+                    <Border>
+						<ContentPresenter Name="Content" Tag="{Binding RelativeSource={RelativeSource TemplatedParent}}" />
+                        <VisualStateManager.VisualStateGroups>
+                            <VisualStateGroup Name="Editing">
+                                <VisualState Name="None" />
+                                <VisualState Name="EditText">
                                     <Storyboard>
-                                        <ObjectAnimationUsingKeyFrames Storyboard.TargetProperty="IsTabStop">
-                                            <DiscreteObjectKeyFrame KeyTime="0:0:0" Value="False" />
-										</ObjectAnimationUsingKeyFrames>
-										<ObjectAnimationUsingKeyFrames Storyboard.TargetProperty="HorizontalContentAlignment">
-											<DiscreteObjectKeyFrame KeyTime="0:0:0" Value="Stretch" />
-										</ObjectAnimationUsingKeyFrames>
-										<ObjectAnimationUsingKeyFrames Storyboard.TargetProperty="ContentTemplate">
-											<DiscreteObjectKeyFrame KeyTime="0:0:0">
-												<DiscreteObjectKeyFrame.Value>
+                                        <ObjectAnimationUsingKeyFrames Storyboard.TargetName="Content" Storyboard.TargetProperty="ContentTemplate">
+                                            <DiscreteObjectKeyFrame KeyTime="0:0:0">
+                                                <DiscreteObjectKeyFrame.Value>
                                                     <DataTemplate>
-                                                        <toolkitInput:NumericUpDown Value="{Binding Tag.EditorValue, RelativeSource={RelativeSource TemplatedParent}, Mode=TwoWay}" 
+                                                        <TextBox Text="{Binding Tag.EditedValue, RelativeSource={RelativeSource TemplatedParent}, Mode=TwoWay}"
+                                                                 SelectionLength="1000000000" company:ControlExtensions.FocusOnLoad="True" />
+                                                    </DataTemplate>
+                                                </DiscreteObjectKeyFrame.Value>
+                                            </DiscreteObjectKeyFrame>
+                                        </ObjectAnimationUsingKeyFrames>
+                                    </Storyboard>
+                                </VisualState>
+                                <VisualState Name="EditNumber">
+                                    <Storyboard>
+                                        <ObjectAnimationUsingKeyFrames Storyboard.TargetName="Content" Storyboard.TargetProperty="ContentTemplate">
+                                            <DiscreteObjectKeyFrame KeyTime="0:0:0">
+                                                <DiscreteObjectKeyFrame.Value>
+                                                    <DataTemplate>
+														<toolkitInput:NumericUpDown Value="{Binding Tag.EditedValue, RelativeSource={RelativeSource TemplatedParent}, Mode=TwoWay}" 
                                                                                     Minimum="-1000000000" Maximum="1000000000" IsTabStop="False" company:ControlExtensions.FocusOnLoad="True">
                                                             <toolkitInput:NumericUpDown.Template>
                                                                 <ControlTemplate TargetType="toolkitInput:NumericUpDown">
@@ -453,35 +480,29 @@
                                                         </toolkitInput:NumericUpDown>
                                                     </DataTemplate>
                                                 </DiscreteObjectKeyFrame.Value>
-											</DiscreteObjectKeyFrame>
-										</ObjectAnimationUsingKeyFrames>
-									</Storyboard>
-								</VisualState>
-								<VisualState Name="EditDate">
+                                            </DiscreteObjectKeyFrame>
+                                        </ObjectAnimationUsingKeyFrames>
+                                    </Storyboard>
+                                </VisualState>
+                                <VisualState Name="EditDate">
                                     <Storyboard>
-                                        <ObjectAnimationUsingKeyFrames Storyboard.TargetProperty="IsTabStop">
-                                            <DiscreteObjectKeyFrame KeyTime="0:0:0" Value="False" />
-										</ObjectAnimationUsingKeyFrames>
-										<ObjectAnimationUsingKeyFrames Storyboard.TargetProperty="HorizontalContentAlignment">
-											<DiscreteObjectKeyFrame KeyTime="0:0:0" Value="Stretch" />
-										</ObjectAnimationUsingKeyFrames>
-										<ObjectAnimationUsingKeyFrames Storyboard.TargetProperty="ContentTemplate">
-											<DiscreteObjectKeyFrame KeyTime="0:0:0">
-												<DiscreteObjectKeyFrame.Value>
+                                        <ObjectAnimationUsingKeyFrames Storyboard.TargetName="Content" Storyboard.TargetProperty="ContentTemplate">
+                                            <DiscreteObjectKeyFrame KeyTime="0:0:0">
+                                                <DiscreteObjectKeyFrame.Value>
                                                     <DataTemplate>
-                                                        <controls:DatePicker SelectedDate="{Binding Tag.EditorValue, RelativeSource={RelativeSource TemplatedParent}, Mode=TwoWay}"
+														<controls:DatePicker SelectedDate="{Binding Tag.EditedValue, RelativeSource={RelativeSource TemplatedParent}, Mode=TwoWay}"
                                                                              company:ControlExtensions.FocusOnLoad="True" />
                                                     </DataTemplate>
                                                 </DiscreteObjectKeyFrame.Value>
-											</DiscreteObjectKeyFrame>
-										</ObjectAnimationUsingKeyFrames>
-									</Storyboard>
-								</VisualState>
-							</VisualStateGroup>
-						</VisualStateManager.VisualStateGroups>
-					</Border>
-				</ControlTemplate>
-			</Setter.Value>
+                                            </DiscreteObjectKeyFrame>
+                                        </ObjectAnimationUsingKeyFrames>
+                                    </Storyboard>
+                                </VisualState>
+                            </VisualStateGroup>
+                        </VisualStateManager.VisualStateGroups>
+                    </Border>
+                </ControlTemplate>
+            </Setter.Value>
         </Setter>
     </Style>
 
