--- a/Examples/Page.xaml
+++ b/Examples/Page.xaml
@@ -78,7 +78,7 @@
 				<controllers:Column Binding="{Binding Name, Mode=TwoWay}" Width="2*" CellStyle="{StaticResource cellStyleName}" />
 				<controllers:Column Binding="{Binding Age, Mode=TwoWay}" Width="*" IsEditable="True" CellStyle="{StaticResource cellStyleAge}" />
 				<controllers:Column Binding="{Binding Orders[0].Name, Mode=TwoWay}" Width="3*" IsEditable="True" Header="First Order Name" />
-				<controllers:Column Binding="{Binding IsSingle, Mode=TwoWay}" Width="*" CellStyle="{StaticResource cellStyleIsSingle}" />
+				<controllers:Column Binding="{Binding IsSingle, Mode=TwoWay}" Width="*" />
 				<controllers:Column Binding="{Binding MaritalStatus, Mode=TwoWay}" Width="*" CellStyle="{StaticResource cellStyleMaritalStatus}" />
 				<controllers:Column Binding="{Binding HireDate, Mode=TwoWay}" Width="2*" />
 			</company:DataGrid.Columns>
