--- a/Examples/Page.xaml
+++ b/Examples/Page.xaml
@@ -1,12 +1,10 @@
 ﻿<UserControl x:Class="Examples.Page"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" 
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" 
-    xmlns:company="clr-namespace:Company.DataGrid.Views;assembly=Company.DataGrid" 
-    xmlns:controllers="clr-namespace:Company.DataGrid.Controllers;assembly=Company.DataGrid" 
+    xmlns:company="http://schemas.company.com"
     xmlns:Examples="clr-namespace:Examples" 
     xmlns:ComponentModel="clr-namespace:System.ComponentModel;assembly=System.Windows" 
-    xmlns:toolkit="clr-namespace:System.Windows.Controls;assembly=System.Windows.Controls.Toolkit"
-    >
+    xmlns:toolkit="http://schemas.microsoft.com/winfx/2006/xaml/presentation/toolkit">
 	<Grid Name="layoutRoot" Width="900" VerticalAlignment="Center">
 		<Grid.Resources>
 			<Style TargetType="Button">
@@ -75,12 +73,12 @@
 		<CheckBox Content="Switch from automatic to custom columns" IsChecked="{Binding AutoCreateColumns, ElementName=dataGrid, Mode=TwoWay}" />
 		<company:DataGrid x:Name="dataGrid" Grid.Row="1" SelectionMode="Extended" IsEditable="True" AutoCreateColumns="False">
 			<company:DataGrid.Columns>
-				<controllers:Column Binding="{Binding Name, Mode=TwoWay}" Width="2*" CellStyle="{StaticResource cellStyleName}" />
-				<controllers:Column Binding="{Binding Age, Mode=TwoWay}" Width="*" IsEditable="True" CellStyle="{StaticResource cellStyleAge}" />
-				<controllers:Column Binding="{Binding Orders[0].Name, Mode=TwoWay}" Width="3*" IsEditable="True" Header="First Order Name" />
-				<controllers:Column Binding="{Binding IsSingle, Mode=TwoWay}" Width="*" />
-				<controllers:Column Binding="{Binding MaritalStatus, Mode=TwoWay}" Width="*" CellStyle="{StaticResource cellStyleMaritalStatus}" />
-				<controllers:Column Binding="{Binding HireDate, Mode=TwoWay}" Width="2*" />
+				<company:Column Binding="{Binding Name, Mode=TwoWay}" Width="2*" CellStyle="{StaticResource cellStyleName}" />
+				<company:Column Binding="{Binding Age, Mode=TwoWay}" Width="*" IsEditable="True" CellStyle="{StaticResource cellStyleAge}" />
+				<company:Column Binding="{Binding Orders[0].Name, Mode=TwoWay}" Width="3*" IsEditable="True" Header="First Order Name" />
+				<company:Column Binding="{Binding IsSingle, Mode=TwoWay}" Width="*" />
+				<company:Column Binding="{Binding MaritalStatus, Mode=TwoWay}" Width="*" CellStyle="{StaticResource cellStyleMaritalStatus}" />
+				<company:Column Binding="{Binding HireDate, Mode=TwoWay}" Width="2*" />
 			</company:DataGrid.Columns>
 			<!--<company:DataGrid.SortDescriptions>
 				<ComponentModel:SortDescription PropertyName="Age" Direction="Descending" />
