Added binding to primitive types: numbers, symbols and strings.

--- a/Company.DataGrid/themes/generic.xaml
+++ b/Company.DataGrid/themes/generic.xaml
@@ -54,6 +54,7 @@
 
 	<Style TargetType="company:HeaderRow">
 		<Setter Property="IsTabStop" Value="False" />
+		<Setter Property="MinHeight" Value="22" />
 		<Setter Property="ItemsPanel">
 			<Setter.Value>
 				<ItemsPanelTemplate>
